# vn-stock-ai-hedgefund

./: README.md  backtester.py  main.py  pyproject.toml
agents/: backtest_agent.py  data_agent.py  orchestration.py  tools.py
agents/analysts/: fundamental_analyst.py  news_analyst.py  sentiment_analyst.py  technical_analyst.py
agents/graph/: __init__.py  trading_graph.py
agents/managers/: __init__.py  research_manager.py  risk_manager.py
agents/researchers/: research_team.py
backend/: app.py
utils/: logging.py  model_factory.py  technical_analysis.py  telegram.py
